--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-     "build": "echo \"No build step required for Node.js backend\"",  
-    "dev": "node server.js"   
+    "build": "echo \"No build step required for Node.js backend\"", 
+    "dev": "node server.js"
+    
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,11 @@
     "@huggingface/inference": "^4.6.1",
     "audiobuffer-to-wav": "^1.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
+    "fs-extra": "^11.2.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "node-wav": "^0.0.2",
